AS add movile mode views to all pages

--- a/app/html/changeNetworkPassword.html
+++ b/app/html/changeNetworkPassword.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" >
     <link rel="stylesheet" type="text/css" href="../css/style.css" media="screen" />
     <script src="../lib/jquery-2.1.0.min.js"></script>
     <!-- <script type="text/javascript" src="../js/ssid.js"></script> -->
@@ -12,8 +13,8 @@
         <h1>Change the Network Password</h1>
         <p>Some description here</p>
         <form>
-					<input type="text" placeholder="Passphrase" id="ssidPassphrase"></input><br>
-					<div id="ssidPassphraseError" class="inputError" style="display:none;"></div>
+          <input type="text" placeholder="Passphrase" id="ssidPassphrase"></input><br>
+          <div id="ssidPassphraseError" class="inputError" style="display:none;"></div>
           <input type="submit" value="Submit"></input>
         </form>
       </div>
