--- a/app/html/login.html
+++ b/app/html/login.html
@@ -1,24 +1,25 @@
 <html>
-	<head>
-		<link rel="stylesheet" type="text/css" href="../css/style.css" media="screen" />
-    	<script src="../lib/jquery-2.1.0.min.js"></script>
-    	<script type="text/javascript" src="../js/request.js"></script>
-    	<script type="text/javascript" src="../js/helper.js"></script>
-      <script type="text/javascript" src="../js/login.js"></script>
-	</head>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" >
+    <link rel="stylesheet" type="text/css" href="../css/style.css" media="screen" />
+    <script src="../lib/jquery-2.1.0.min.js"></script>
+    <script type="text/javascript" src="../js/request.js"></script>
+    <script type="text/javascript" src="../js/helper.js"></script>
+    <script type="text/javascript" src="../js/login.js"></script>
+  </head>
 
-	<body>
-		<header></header>
-		<div class="formDiv">
-			<h1>Openwireless</h1>
-            <form>
-                <div id="genericError" class="inputError" style="display:none;"></div>
-                <input type="text" placeholder="Username" id="username"/><br>
-                <div id="usernameError" class="inputError" style="display:none;"></div>
-				<input type="password" placeholder="Password" id="password"/><br>
-                <div id="passwordError" class="inputError" style="display:none;"></div>
-				<input type="submit" value="Submit"/>
-			</form>
-		</div>
-	</body>
+  <body>
+    <header></header>
+    <div class="formDiv">
+      <h1>Openwireless</h1>
+      <form>
+        <div id="genericError" class="inputError" style="display:none;"></div>
+        <input type="text" placeholder="Username" id="username"/><br>
+        <div id="usernameError" class="inputError" style="display:none;"></div>
+        <input type="password" placeholder="Password" id="password"/><br>
+        <div id="passwordError" class="inputError" style="display:none;"></div>
+        <input type="submit" value="Submit"/>
+      </form>
+    </div>
+  </body>
 </html>
