LK & AS - error messages display on settings and dashboard; refactored dashboard.js

--- a/app/html/dashboard.html
+++ b/app/html/dashboard.html
@@ -18,6 +18,8 @@
     <span><a href="./settings.html"><img src="../images/settings.png" class="icon" alt="Settings" /></a></span>
   </header>
 
+  <div class="inputError" style="display:none;"></div>
+
   <script id="interface-template" type="text/x-handlebars-template">
       <div class="network on">
         <header>
