--- a/app/html/settings.html
+++ b/app/html/settings.html
@@ -20,6 +20,8 @@
         <span><a class="close" href="./dashboard.html">Close</a></span>
       </header>
 
+      <div class="inputError" style="display:none;"></div>
+
       <script id="dropdown-template" type="text/x-handlebars-template">
         {{#each options}}
           <option>{{this}}</option>
