AS & LK - add validations to isp upload and download speeds

--- a/app/html/settings.html
+++ b/app/html/settings.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="../css/admin-style.css" media="screen" />
     <script src="../lib/jquery-2.1.0.min.js"></script>
     <script type="text/javascript" src="../lib/handlebars.min.js"></script>
+    <script type="text/javascript" src="../lib/jquery.validate.min.js"></script>
 
     <script type="text/javascript" src="../lib/jeditable.min.js"></script>
     <script type="text/javascript" src="../js/security.js"></script>
