LK add encryption options to openwireless

--- a/app/html/settings.html
+++ b/app/html/settings.html
@@ -79,6 +79,9 @@
         <p>Channel <span class="selector"><select id="openwirelessChannel">OpenwirelessChannel</select></span> ghz</p>
         <p>Channel bandwidth <span class="selector"><select id="openwirelessChannelBandwidth">OpenwirelessChannelBandwidth</select></span> ghz</p>
         <br>
+        <h4>Encryption</h4>
+        <p><span class="selector"><select id="openwirelessEncryption">OpenwirelessEnctyption</select></span></p>
+        <br>
         <br>
 
         <h4>VPN/TOR Configuration</h4>
