JR & LK software update button sends ajax request

--- a/app/html/dashboard.html
+++ b/app/html/dashboard.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="../js/security.js"></script>
     <script type="text/javascript" src="../js/request.js"></script>
     <script type="text/javascript" src="../js/dashboard.js"></script>
+    <script type="text/javascript" src="../js/update.js"></script>
 
   </head>
   <body>
@@ -60,8 +61,8 @@
   <section id="main"></section>
 
   <footer>
-  <p>Up to date. Last checked <span id="date">June 11, 2014</span></p>
-    <img src="../images/update.png" alt="update" />
+  <p>Last checked <span id="date">June 11, 2014</span></p>
+    <img id="checkForUpdate" src="../images/update.png" alt="update" />
   </footer>
 </div>
 
