LK add protocol to settings - http or https

--- a/app/html/settings.html
+++ b/app/html/settings.html
@@ -80,8 +80,11 @@
         <p>Channel bandwidth <span class="selector"><select id="openwirelessChannelBandwidth">OpenwirelessChannelBandwidth</select></span> ghz</p>
         <br>
         <h4>Encryption</h4>
-        <p><span class="selector"><select id="openwirelessEncryption">OpenwirelessEnctyption</select></span></p>
+        <p><span class="selector"><select id="openwirelessEncryption">OpenwirelessEncryption</select></span></p>
         <br>
+
+        <h4>Transfer Protocol</h4>
+        <p><span class="selector"><select id="transferProtocol">TransferProtocol</select></span></p>
         <br>
 
         <h4>VPN/TOR Configuration</h4>
