Move to generic error handling across all pages

--- a/app/html/changeNetworkPassword.html
+++ b/app/html/changeNetworkPassword.html
@@ -3,6 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" >
     <link rel="stylesheet" type="text/css" href="../css/style.css" media="screen" />
     <script src="../lib/jquery-2.1.0.min.js"></script>
+    <script type="text/javascript" src="../js/errorCallback.js"></script>
     <!-- <script type="text/javascript" src="../js/ssid.js"></script> -->
   </head>
 
@@ -12,6 +13,7 @@
       <div class="formDiv">
         <h1>Change the Network Password</h1>
         <p>Some description here</p>
+        <div id="genericError" class="inputError" style="display:none;"></div>
         <form>
           <input type="text" placeholder="Passphrase" id="ssidPassphrase"></input><br>
           <div id="ssidPassphraseError" class="inputError" style="display:none;"></div>
