--- a/app/html/changePassword.html
+++ b/app/html/changePassword.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="../js/security.js"></script>
     <script type="text/javascript" src="../js/helper.js"></script>
     <script type="text/javascript" src="../js/request.js"></script>
+    <script type="text/javascript" src="../js/errorCallback.js"></script>
     <script type="text/javascript" src="../js/changePassword.js"></script>
   </head>
   <body>
