--- a/app/html/changeUsernameAndPassword.html
+++ b/app/html/changeUsernameAndPassword.html
@@ -7,7 +7,8 @@
     <script type="text/javascript" src="../js/request.js"></script>
     <script type="text/javascript" src="../js/security.js"></script>
     <script type="text/javascript" src="../js/helper.js"></script>
-	<script type="text/javascript" src="../js/changeUsernameAndPassword.js"></script>
+    <script type="text/javascript" src="../js/errorCallback.js"></script>
+    <script type="text/javascript" src="../js/changeUsernameAndPassword.js"></script>
 	</head>
 	<body>
 		<div id="outerContainer">
@@ -15,6 +16,7 @@
 			<div class="formDiv">
 				<h1>Change your username and password</h1>
 				<form>
+					<div id="genericError" class="inputError" style="display:none;"></div>
 					<input type="username" id="newUsername" placeholder="New Username"></input><br>
 					<div id="newUsernameError" class="inputError" style="display:none;"></div>
 					<input type="password" id="newPassword" placeholder="New password"></input><br>
