--- a/app/html/login.html
+++ b/app/html/login.html
@@ -5,6 +5,7 @@
     <script src="../lib/jquery-2.1.0.min.js"></script>
     <script type="text/javascript" src="../js/request.js"></script>
     <script type="text/javascript" src="../js/helper.js"></script>
+    <script type="text/javascript" src="../js/errorCallback.js"></script>
     <script type="text/javascript" src="../js/login.js"></script>
   </head>
 
