--- a/app/html/monitoring.html
+++ b/app/html/monitoring.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="../css/style.css" media="screen" />
     <script src="../lib/jquery-2.1.0.min.js"></script>
     <script type="text/javascript" src="../lib/d3.min.js"></script>
+    <script type="text/javascript" src="../js/errorCallback.js"></script>
     <script type="text/javascript" src="../js/monitoring.js"></script>
   </head>
 
