--- a/app/html/settings.html
+++ b/app/html/settings.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="../js/security.js"></script>
     <script type="text/javascript" src="../js/request.js"></script>
     <script type="text/javascript" src="../js/helper.js"></script>
+    <script type="text/javascript" src="../js/errorCallback.js"></script>
     <script type="text/javascript" src="../js/settings.js"></script>
   </head>
   <body>
@@ -21,7 +22,7 @@
         <span><a class="close" href="./dashboard.html">Close</a></span>
       </header>
 
-      <div class="inputError" style="display:none;"></div>
+      <div id="genericError" class="inputError" style="display:none;"></div>
 
       <script id="dropdown-template" type="text/x-handlebars-template">
         {{#each options}}
