--- a/app/html/changeSSID.html
+++ b/app/html/changeSSID.html
@@ -3,6 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" >
     <link rel="stylesheet" type="text/css" href="../css/style.css" media="screen" />
     <script src="../lib/jquery-2.1.0.min.js"></script>
+    <script type="text/javascript" src="../js/errorCallback.js"></script>
     <!-- <script type="text/javascript" src="../js/ssid.js"></script> -->
   </head>
 
@@ -14,7 +15,7 @@
         <p>This is the SSID for your personal use. It is what you will see when you connect to the wireless.</p>
         <form>
           <input type="text" placeholder="New SSID" id="ssid"></input><br>
-          <div id="ssidError" class="inputError" style="display:none;"></div>
+          <div id="genericError" class="inputError" style="display:none;"></div>
           <input type="submit" value="Submit"></input>
         </form>
       </div>
