Remove last bits of Luci-style auth

--- a/app/html/login.html
+++ b/app/html/login.html
@@ -15,9 +15,7 @@
       <h1>Openwireless</h1>
       <form>
         <div id="genericError" class="inputError" style="display:none;"></div>
-        <input type="text" placeholder="Username" id="username"/><br>
-        <div id="usernameError" class="inputError" style="display:none;"></div>
-        <input type="password" placeholder="Password" id="password"/><br>
+        <input type="password" placeholder="Administrator password" id="password"/><br>
         <div id="passwordError" class="inputError" style="display:none;"></div>
         <input type="submit" value="Submit"/>
       </form>
