--- a/app/html/dashboard.html
+++ b/app/html/dashboard.html
@@ -4,10 +4,12 @@
     <link rel="stylesheet" href="../css/admin-style.css" />
     <script type="text/javascript" src="../lib/jquery-2.1.0.min.js"></script>
     <script type="text/javascript" src="../lib/handlebars.min.js"></script>
+    <script type="text/javascript" src="../lib/jquery-timer.js"></script>
     <script type="text/javascript" src="../js/request.js"></script>
     <script type="text/javascript" src="../js/errorCallback.js"></script>
     <script type="text/javascript" src="../js/dashboard.js"></script>
     <script type="text/javascript" src="../js/update.js"></script>
+    <script type="text/javascript" src="../js/update_bytecounts.js"></script>
 
   </head>
   <body>
@@ -26,8 +28,8 @@
         <header>
           <img src="{{imageSource}}" alt="router-on" class="icon" />
           <div class="speed">
-            <div class="upload">{{uploadSpeed}}<span> {{uploadSpeedMetric}}</span></div>
-            <div class="download">{{downloadSpeed}}<span> {{downloadSpeedMetric}}</span></div>
+            <div class="upload"><span class="upload-speed">{{uploadSpeed}}</span><span> {{uploadSpeedMetric}}</span></div>
+            <div class="download"><span class="download-speed">{{downloadSpeed}}</span><span> {{downloadSpeedMetric}}</span></div>
           </div>
         </header>
         <div class="title">
