JR & LK - add some functionality around ssh upload

--- a/app/html/settings.html
+++ b/app/html/settings.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="../js/helper.js"></script>
     <script type="text/javascript" src="../js/errorCallback.js"></script>
     <script type="text/javascript" src="../js/settings.js"></script>
+    <script type="text/javascript" src="../js/sshupload.js"></script>
   </head>
   <body>
     <div class="container">
@@ -99,7 +100,7 @@
         <br>
 
         <h4>SSH Keys</h4>
-        <p><a href="#">Upload your ssh keys for command line access</a></p>
+        <p id="SSH">Upload your ssh keys for command line access</p>
         <br>
         <br>
 
