Move HTML files to root of app directory

--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -1,15 +1,15 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" >
-    <link rel="stylesheet" href="../css/admin-style.css" />
-    <script type="text/javascript" src="../lib/jquery-2.1.0.min.js"></script>
-    <script type="text/javascript" src="../lib/handlebars.min.js"></script>
-    <script type="text/javascript" src="../lib/jquery-timer.js"></script>
-    <script type="text/javascript" src="../js/request.js"></script>
-    <script type="text/javascript" src="../js/errorCallback.js"></script>
-    <script type="text/javascript" src="../js/dashboard.js"></script>
-    <script type="text/javascript" src="../js/update.js"></script>
-    <script type="text/javascript" src="../js/update_bytecounts.js"></script>
+    <link rel="stylesheet" href="css/admin-style.css" />
+    <script type="text/javascript" src="lib/jquery-2.1.0.min.js"></script>
+    <script type="text/javascript" src="lib/handlebars.min.js"></script>
+    <script type="text/javascript" src="lib/jquery-timer.js"></script>
+    <script type="text/javascript" src="js/request.js"></script>
+    <script type="text/javascript" src="js/errorCallback.js"></script>
+    <script type="text/javascript" src="js/dashboard.js"></script>
+    <script type="text/javascript" src="js/update.js"></script>
+    <script type="text/javascript" src="js/update_bytecounts.js"></script>
 
   </head>
   <body>
@@ -18,7 +18,7 @@
   <header>
     <span class="icon"></span>
     <h1>Dashboard</h1>
-    <span><a href="./settings.html"><img src="../images/settings.png" class="icon" alt="Settings" /></a></span>
+    <span><a href="./settings.html"><img src="images/settings.png" class="icon" alt="Settings" /></a></span>
   </header>
 
   <div id="genericError" class="inputError" style="display:none;"></div>
@@ -64,7 +64,7 @@
 
   <footer>
   <p>Last checked <span id="date">June 11, 2014</span></p>
-    <img id="checkForUpdate" src="../images/update.png" alt="update" />
+    <img id="checkForUpdate" src="images/update.png" alt="update" />
   </footer>
 </div>
 
