--- a/app/login.html
+++ b/app/login.html
@@ -1,12 +1,12 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" >
-    <link rel="stylesheet" type="text/css" href="../css/style.css" media="screen" />
-    <script src="../lib/jquery-2.1.0.min.js"></script>
-    <script type="text/javascript" src="../js/request.js"></script>
-    <script type="text/javascript" src="../js/helper.js"></script>
-    <script type="text/javascript" src="../js/errorCallback.js"></script>
-    <script type="text/javascript" src="../js/login.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
+    <script src="lib/jquery-2.1.0.min.js"></script>
+    <script type="text/javascript" src="js/request.js"></script>
+    <script type="text/javascript" src="js/helper.js"></script>
+    <script type="text/javascript" src="js/errorCallback.js"></script>
+    <script type="text/javascript" src="js/login.js"></script>
   </head>
 
   <body>
