--- a/app/monitoring.html
+++ b/app/monitoring.html
@@ -1,16 +1,16 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" >
-    <link rel="stylesheet" type="text/css" href="../css/style.css" media="screen" />
-    <script src="../lib/jquery-2.1.0.min.js"></script>
-    <script type="text/javascript" src="../lib/d3.min.js"></script>
-    <script type="text/javascript" src="../js/errorCallback.js"></script>
-    <script type="text/javascript" src="../js/monitoring.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
+    <script src="lib/jquery-2.1.0.min.js"></script>
+    <script type="text/javascript" src="lib/d3.min.js"></script>
+    <script type="text/javascript" src="js/errorCallback.js"></script>
+    <script type="text/javascript" src="js/monitoring.js"></script>
   </head>
 
   <body>
     <header></header>
-    <img id="antenna" src="../images/antenna.svg">
+    <img id="antenna" src="images/antenna.svg">
     <h1>MyNetwork</h1>
     <div id="bandwidthGraph">
       <script>
