--- a/app/settings.html
+++ b/app/settings.html
@@ -1,17 +1,17 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" >
-    <link rel="stylesheet" type="text/css" href="../css/admin-style.css" media="screen" />
-    <script src="../lib/jquery-2.1.0.min.js"></script>
-    <script type="text/javascript" src="../lib/handlebars.min.js"></script>
-    <script type="text/javascript" src="../lib/jquery.validate.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/admin-style.css" media="screen" />
+    <script src="lib/jquery-2.1.0.min.js"></script>
+    <script type="text/javascript" src="lib/handlebars.min.js"></script>
+    <script type="text/javascript" src="lib/jquery.validate.min.js"></script>
 
-    <script type="text/javascript" src="../lib/jeditable.min.js"></script>
-    <script type="text/javascript" src="../js/request.js"></script>
-    <script type="text/javascript" src="../js/helper.js"></script>
-    <script type="text/javascript" src="../js/errorCallback.js"></script>
-    <script type="text/javascript" src="../js/settings.js"></script>
-    <script type="text/javascript" src="../js/sshupload.js"></script>
+    <script type="text/javascript" src="lib/jeditable.min.js"></script>
+    <script type="text/javascript" src="js/request.js"></script>
+    <script type="text/javascript" src="js/helper.js"></script>
+    <script type="text/javascript" src="js/errorCallback.js"></script>
+    <script type="text/javascript" src="js/settings.js"></script>
+    <script type="text/javascript" src="js/sshupload.js"></script>
   </head>
   <body>
     <div class="container">
