Style changes to work with CSP

--- a/app/html/changePassword.html
+++ b/app/html/changePassword.html
@@ -15,13 +15,13 @@
       <div class="formDiv">
         <h1>Change your password</h1>
         <form>
-          <div id="genericError" class="inputError" style="display:none;"></div>
+          <div id="genericError" class="inputError"></div>
           <input type="password" id="oldPassword" placeholder="Old password"></input><br>
           <br>
           <input type="password" id="newPassword" placeholder="New password"></input><br>
-          <div id="newPasswordError" class="inputError" style="display:none;"></div>
+          <div id="newPasswordError" class="inputError"></div>
           <input type="password" id="retypePassword" placeholder="Retype new password"></input><br>
-          <div id="retypePasswordError" class="inputError" style="display:none;"></div>
+          <div id="retypePasswordError" class="inputError"></div>
           <input type="submit" value="Submit"></input>
         </form>
       </div>
