--- a/app/html/changeSSID.html
+++ b/app/html/changeSSID.html
@@ -15,11 +15,11 @@
         <p>This is the SSID for your personal use. It is what you will see when you connect to the wireless.</p>
         <form>
           <input type="text" placeholder="New SSID" id="ssid"></input><br>
-          <div id="genericError" class="inputError" style="display:none;"></div>
+          <div id="genericError" class="inputError"></div>
           <input type="submit" value="Submit"></input>
         </form>
       </div>
-      <div id="restartSuccess" style="display:none;">
+      <div id="restartSuccess">
       </div>
     </div>
   </body>
