--- a/app/html/dashboard.html
+++ b/app/html/dashboard.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" >
     <link rel="stylesheet" href="../css/admin-style.css" />
     <script type="text/javascript" src="../lib/jquery-2.1.0.min.js"></script>
-    <script type="text/javascript" src="../lib/handlebars.min.js"></script>
+    <script type="text/javascript" src="../lib/handlebars-v1.3.0.js"></script>
     <script type="text/javascript" src="../lib/jquery-timer.js"></script>
     <script type="text/javascript" src="../js/request.js"></script>
     <script type="text/javascript" src="../js/errorCallback.js"></script>
@@ -21,7 +21,7 @@
     <span><a href="./settings.html"><img src="../images/settings.png" class="icon" alt="Settings" /></a></span>
   </header>
 
-  <div id="genericError" class="inputError" style="display:none;"></div>
+  <div id="genericError" class="inputError"></div>
 
   <script id="interface-template" type="text/x-handlebars-template">
       <div class="network on">
