--- a/app/html/login.html
+++ b/app/html/login.html
@@ -14,9 +14,9 @@
     <div class="formDiv">
       <h1>Openwireless</h1>
       <form>
-        <div id="genericError" class="inputError" style="display:none;"></div>
+        <div id="genericError" class="inputError"></div>
         <input type="password" placeholder="Administrator password" id="password"/><br>
-        <div id="passwordError" class="inputError" style="display:none;"></div>
+        <div id="passwordError" class="inputError"></div>
         <input type="submit" value="Submit"/>
       </form>
     </div>
