--- a/app/html/setSSID.html
+++ b/app/html/setSSID.html
@@ -17,19 +17,19 @@
         <h1>Set the SSID</h1>
         <p>This is the SSID for your personal use. It is what you will see when you connect to the wireless.</p>
         <form>
-          <div id="genericError" class="inputError" style="display:none;"></div>
+          <div id="genericError" class="inputError"></div>
           <input type="text" placeholder="New SSID" id="ssid"></input><br>
-          <div id="ssidError" class="inputError" style="display:none;"></div>
+          <div id="ssidError" class="inputError"></div>
           <input type="text" placeholder="Passphrase" id="ssidPassphrase"></input><br>
-          <div id="ssidPassphraseError" class="inputError" style="display:none;"></div>
+          <div id="ssidPassphraseError" class="inputError"></div>
           <input type="submit" value="Submit"></input>
         </form>
       </div>
-      <div id="restarting" style="display:none;">
+      <div id="restarting">
         <h1>Restarting</h1>
         <p>SSID update successful &#x2713;<br>Your router is now restarting. When it reboots, connect your device to the new wireless network.</p>
       </div>
-      <div id="restartSuccess" style="display:none;">
+      <div id="restartSuccess">
       </div>
     </div>
   </body>
