--- a/app/html/settings.html
+++ b/app/html/settings.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" >
     <link rel="stylesheet" type="text/css" href="../css/admin-style.css" media="screen" />
     <script src="../lib/jquery-2.1.0.min.js"></script>
-    <script type="text/javascript" src="../lib/handlebars.min.js"></script>
+    <script type="text/javascript" src="../lib/handlebars-v1.3.0.js"></script>
     <script type="text/javascript" src="../lib/jquery.validate.min.js"></script>
 
     <script type="text/javascript" src="../lib/jeditable.min.js"></script>
@@ -22,7 +22,7 @@
         <span><a class="close" href="./dashboard.html">Close</a></span>
       </header>
 
-      <div id="genericError" class="inputError" style="display:none;"></div>
+      <div id="genericError" class="inputError"></div>
 
       <script id="dropdown-template" type="text/x-handlebars-template">
         {{#each options}}
