--- a/app/html/changeNetworkPassword.html
+++ b/app/html/changeNetworkPassword.html
@@ -13,14 +13,14 @@
       <div class="formDiv">
         <h1>Change the Network Password</h1>
         <p>Some description here</p>
-        <div id="genericError" class="inputError" style="display:none;"></div>
+        <div id="genericError" class="inputError"></div>
         <form>
           <input type="text" placeholder="Passphrase" id="ssidPassphrase"></input><br>
-          <div id="ssidPassphraseError" class="inputError" style="display:none;"></div>
+          <div id="ssidPassphraseError" class="inputError"></div>
           <input type="submit" value="Submit"></input>
         </form>
       </div>
-      <div id="restartSuccess" style="display:none;">
+      <div id="restartSuccess">
       </div>
     </div>
   </body>
