Fix dashboard and settings under CSP.
With CSP header "default-src 'self'", Handlebars
template compilation fails because it requires Function.call,
which is forbidden by CSP.

To fix, we precompile templates into JS at build time, which
avoids the need for Function.call.

--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -5,6 +5,7 @@
     <script type="text/javascript" src="lib/jquery-2.1.0.min.js"></script>
     <script type="text/javascript" src="lib/handlebars-v1.3.0.js"></script>
     <script type="text/javascript" src="lib/jquery-timer.js"></script>
+    <script type="text/javascript" src="js/templates.js"></script>
     <script type="text/javascript" src="js/request.js"></script>
     <script type="text/javascript" src="js/errorCallback.js"></script>
     <script type="text/javascript" src="js/dashboard.js"></script>
@@ -22,43 +23,6 @@
   </header>
 
   <div id="genericError" class="inputError"></div>
-
-  <script id="interface-template" type="text/x-handlebars-template">
-      <div class="network on">
-        <header>
-          <img src="{{imageSource}}" alt="router-on" class="icon" />
-          <div class="speed">
-            <div class="upload"><span class="upload-speed">{{uploadSpeed}}</span><span> {{uploadSpeedMetric}}</span></div>
-            <div class="download"><span class="download-speed">{{downloadSpeed}}</span><span> {{downloadSpeedMetric}}</span></div>
-          </div>
-        </header>
-        <div class="title">
-          <h2>{{name}}</h2>
-          {{#if pingSpeed}} 
-            <div class="ping">{{pingSpeed}}<small> {{pingSpeedMetric}} ping</small></div>
-          {{/if}}
-          {{#if devices}}
-            <div class="devices">{{devices}}<small> devices</small></div>
-          {{/if}}
-          {{#if maxBandwidthPercent}}
-            <div class="bandwidth">{{maxBandwidthPercent}}%<small> max <br> bandwidth </small></div>
-          {{/if}}
-          {{#if maxMonthlyBandwidth}}
-          <div class="bandwidth">{{monthlyBandwidthUsage}} <small>used of</small> {{maxMonthlyBandwidth}}<small> {{maxMonthlyBandwidthMetric}} max <br> per month </small></div>
-          {{/if}}
-
-        </div>
-
-        {{#if connectivity }}
-        <div class="status"><span class="{{connectivity}}">{{connectivity}}</span></div>
-        {{/if}}
-
-        {{#if state }}
-        <div class="status toggle" id="{{stateId}}"><span class="{{state}} on-button">On</span> | <span class="{{state}} off-button">Off</span></div>
-        {{/if}}
-
-      </div>
-  </script>
 
   <section id="main"></section>
 
