Make setSSID work again.

--- a/app/index.html
+++ b/app/index.html
@@ -1,16 +1,22 @@
 <html>
   <head>
-    <title>Redirecting...</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" >
+    <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
     <script src="lib/jquery-2.1.0.min.js"></script>
     <script src="js/request.js"></script>
+    <script src="js/helper.js"></script>
     <script src="js/index.js"></script>
+    <title>OpenWireless Router</title>
   </head>
 
   <body>
-    <h1>Redirecting...</h1>
-    This page should take you to <a href="welcome.html">welcome</a>
-    or <a href="login.html">login</a> in a moment.
-    If Javascript is disabled, please enable it.
-  </body>
+    <div id="outerContainer">
+      <header></header>
+      <h1>Redirecting...</h1>
+      <p>
+        This page should take you to <a href="welcome.html">welcome</a>
+        or <a href="login.html">login</a> in a moment.
+        If Javascript is disabled, please enable it.
+      </p>
 </html>
 
