--- a/app/setSSID.html
+++ b/app/setSSID.html
@@ -1,11 +1,12 @@
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" >
+    <meta name="viewport" content="width=device-width, initial-scale=1" >
     <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
     <script src="lib/jquery-2.1.0.min.js"></script>
-
+    <script type="text/javascript" src="lib/handlebars-v1.3.0.min.js"></script>
     <script type="text/javascript" src="js/request.js"></script>
     <script type="text/javascript" src="js/helper.js"></script>
+    <script type="text/javascript" src="js/templates.js"></script>
     <script type="text/javascript" src="js/errorCallback.js"></script>
     <script type="text/javascript" src="js/ssid.js"></script>
   </head>
