--- a/app/settings.html
+++ b/app/settings.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" >
+    <meta name="viewport" content="width=device-width, initial-scale=1" >
     <link rel="stylesheet" type="text/css" href="css/admin-style.css" media="screen" />
     <script src="lib/jquery-2.1.0.min.js"></script>
-    <script type="text/javascript" src="lib/handlebars-v1.3.0.js"></script>
+    <script type="text/javascript" src="lib/handlebars-v1.3.0.min.js"></script>
     <script type="text/javascript" src="lib/jquery.validate.min.js"></script>
     <script type="text/javascript" src="lib/jeditable.min.js"></script>
     <script type="text/javascript" src="js/templates.js"></script>
