LK & JR get external IP address using ifconfig.me

--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -27,9 +27,12 @@
   <section id="main"></section>
 
   <footer>
-  <p>Last checked <span id="date">June 11, 2014</span></p>
-    <img id="checkForUpdate" src="images/update.png" alt="update" />
+    <p>Last checked <span id="date">June 11, 2014</span></p>
+      <img id="checkForUpdate" src="images/update.png" alt="update" />
   </footer>
+  <div class="ips">
+    <span class="ip">WAN IP: <span id="wan-ip">Loading</span></span><span class="ip">LAN IP: <span id="lan-ip">Loading</span></span>
+  </div>
 </div>
 
 
