--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="lib/jquery-timer.js"></script>
     <script type="text/javascript" src="js/templates.js"></script>
     <script type="text/javascript" src="js/request.js"></script>
+    <script type="text/javascript" src="js/helper.js"></script>
     <script type="text/javascript" src="js/errorCallback.js"></script>
     <script type="text/javascript" src="js/dashboard.js"></script>
     <script type="text/javascript" src="js/update.js"></script>
