Changed text to say admin requires https

--- a/app/unencrypted/index.html
+++ b/app/unencrypted/index.html
@@ -9,11 +9,9 @@
 <h3>Welcome to OWrt</h3> 
 </p> <p>  
 
-Your router's configuration screen is available via either 
-http://gw.home.lan or https://gw.home.lan  by default, and 
-inaccessable outside your lan. If you use the secure https access 
-you will be presented a self signed certificate, so don't be 
-alarmed if your web browser complains.
+Your router's configuration screen is available via https://gw.home.lan by 
+default, and inaccessable outside of your lan. You will be presented a self 
+signed certificate, so don't be alarmed if your web browser complains.
 </body> 
 
 </html>
