Clarify self-signed warning.

--- a/app/welcome.html
+++ b/app/welcome.html
@@ -16,8 +16,8 @@
       <p>
         This router uses a self-signed SSL certificate. You should expect to see
         a warning saying "This Connection is Untrusted" or "The site's security
-        certificate is not trusted." This is normal, and you should click
-        through the warnings to continue.
+        certificate is not trusted." <b>Only when administrating your
+        router</b>, you should click through the warnings to continue.
       </p>
       <br>
       <a class=button href="https://gw.home.lan/changePassword.html?first_time=true">Continue</a>
