LK make wording of status update and link to dashboard more explicit

--- a/app/settings.html
+++ b/app/settings.html
@@ -19,7 +19,7 @@
       <header>
         <span class="icon"></span>
         <h1>Settings</h1>
-        <span><a class="close" href="./dashboard.html">Close</a></span>
+        <span><a class="close" href="./dashboard.html">Dashboard</a></span>
       </header>
 
       <div id="genericError" class="inputError"></div>
