--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -28,7 +28,7 @@
   <section id="main"></section>
 
   <footer>
-    <p>Last checked <span id="date">June 11, 2014</span></p>
+    <p>Last checked for updates: <span id="date">June 11, 2014</span></p>
       <img id="checkForUpdate" src="images/update.png" alt="update" />
   </footer>
   <div class="ips">
