Welcome sends user to index.html for next redirect

--- a/app/welcome.html
+++ b/app/welcome.html
@@ -20,7 +20,7 @@
         router</b>, you should click through the warnings to continue.
       </p>
       <br>
-      <a class=button href="https://gw.home.lan/changePassword.html?first_time=true">Continue</a>
+      <a class=button href="https://gw.home.lan/">Continue</a>
     </div>
   </body>
 </html>
