--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
     <script src="lib/jquery-2.1.0.min.js"></script>
+    <script src="js/errorCallback.js"></script>
     <script src="js/request.js"></script>
     <script src="js/helper.js"></script>
     <script src="js/index.js"></script>
@@ -13,6 +14,7 @@
     <div id="outerContainer">
       <header></header>
       <h1>Redirecting...</h1>
+      <div id="genericError" class="inputError"></div>
       <p>
         This page should take you to <a href="welcome.html">welcome</a>
         or <a href="login.html">login</a> in a moment.
