--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -23,12 +23,15 @@
     <span><a href="./settings.html"><img src="images/settings.png" class="icon" alt="Settings" /></a></span>
   </header>
 
+  <br>
+  <br>
+
   <div id="genericError" class="inputError"></div>
 
   <section id="main"></section>
 
   <footer>
-    <p>Last checked for updates: <span id="date">June 11, 2014</span></p>
+    <p>Last checked for software updates: <span id="date">June 11, 2014</span></p>
       <img id="checkForUpdate" src="images/update.png" alt="update" />
   </footer>
   <div class="ips">
