Add handling of local URLs to welcome page.

--- a/app/welcome.html
+++ b/app/welcome.html
@@ -2,6 +2,8 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
+    <script type="text/javascript" src="lib/jquery-2.1.0.min.js"></script>
+    <script type="text/javascript" src="js/welcome.js"></script>
     <title>Welcome</title>
   </head>
 
@@ -20,7 +22,7 @@
         router</b>, you should click through the warnings to continue.
       </p>
       <br>
-      <a class=button href="https://gw.home.lan/">Continue</a>
+      <a id=continue class=button href="https://gw.home.lan/">Continue</a>
     </div>
   </body>
 </html>
