Add type attributes to <script> tags.

--- a/app/monitoring.html
+++ b/app/monitoring.html
@@ -2,7 +2,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
-    <script src="lib/jquery-2.1.0.min.js"></script>
+    <script type="text/javascript" src="lib/jquery-2.1.0.min.js"></script>
     <script type="text/javascript" src="lib/d3.min.js"></script>
     <script type="text/javascript" src="js/errorCallback.js"></script>
     <script type="text/javascript" src="js/monitoring.js"></script>
