--- a/app/index.html
+++ b/app/index.html
@@ -2,11 +2,11 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
-    <script src="lib/jquery-2.1.0.min.js"></script>
-    <script src="js/errorCallback.js"></script>
-    <script src="js/request.js"></script>
-    <script src="js/helper.js"></script>
-    <script src="js/index.js"></script>
+    <script type="text/javascript" src="lib/jquery-2.1.0.min.js"></script>
+    <script type="text/javascript" src="js/errorCallback.js"></script>
+    <script type="text/javascript" src="js/request.js"></script>
+    <script type="text/javascript" src="js/helper.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
     <title>OpenWireless Router</title>
   </head>
 
