--- a/app/settings.html
+++ b/app/settings.html
@@ -2,7 +2,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <link rel="stylesheet" type="text/css" href="css/admin-style.css" media="screen" />
-    <script src="lib/jquery-2.1.0.min.js"></script>
+    <script type="text/javascript" src="lib/jquery-2.1.0.min.js"></script>
     <script type="text/javascript" src="lib/handlebars-v1.3.0.min.js"></script>
     <script type="text/javascript" src="lib/jquery.validate.min.js"></script>
     <script type="text/javascript" src="lib/jeditable.min.js"></script>
