SSH UI improvements.
Also provide tooltips for Dashboard/Settings links.

--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -20,7 +20,9 @@
   <header>
     <span class="icon"></span>
     <h1>Dashboard</h1>
-    <span><a href="./settings.html"><img src="images/settings.png" class="icon" alt="Settings" /></a></span>
+    <span>
+      <a title="Settings" href="./settings.html"><img src="images/settings.png" class="icon" alt="Settings" /></a>
+    </span>
   </header>
 
   <br>
