--- a/app/settings.html
+++ b/app/settings.html
@@ -19,7 +19,9 @@
       <header>
         <span class="icon"></span>
         <h1>Settings</h1>
-        <span><a class="close" href="./dashboard.html">Dashboard</a></span>
+        <span>
+          <a class="close" title="Dashboard" href="./dashboard.html">Dashboard</a>
+        </span>
       </header>
       <br>
       <br>
