Wording and spacing on setSSID.html

--- a/app/setSSID.html
+++ b/app/setSSID.html
@@ -16,8 +16,11 @@
       <header></header>
       <div id="genericError" class="inputError"></div>
       <div class="formDiv">
-        <h1>Set the SSID</h1>
-        <p>This is the SSID for your personal use. It is what you will see when you connect to the wireless.</p>
+        <h1>Set the SSID and passphrase</h1>
+        <p>
+          This is the SSID for your personal use. It is the name of the network
+          you will connect to.
+        </p>
         <form>
           <input type="text" placeholder="New SSID" id="ssid"></input><br>
           <div id="ssidError" class="inputError"></div>
@@ -28,9 +31,10 @@
       </div>
       <div id="restarting">
         <h1>Restarting</h1>
-        <p>SSID update successful &#x2713;<br>Your router is now restarting. When it reboots, connect your device to the new wireless network.</p>
-      </div>
-      <div id="restartSuccess">
+        <p>
+          SSID update successful &#x2713;<br>
+          Your router is now restarting. When it reboots, connect your device to the new wireless network.
+        </p>
       </div>
     </div>
   </body>
