Add doctype, favicon, and title to all HTML.

--- a/app/changePassword.html
+++ b/app/changePassword.html
@@ -3,11 +3,13 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
+    <link rel="shortcut icon" href="images/favicon.png" media="screen" />
     <script type="text/javascript" src="lib/jquery-2.1.0.min.js"></script>
     <script type="text/javascript" src="js/helper.js"></script>
     <script type="text/javascript" src="js/request.js"></script>
     <script type="text/javascript" src="js/errorCallback.js"></script>
     <script type="text/javascript" src="js/changePassword.js"></script>
+    <title>Set password</title>
   </head>
   <body>
     <div id="outerContainer">
@@ -16,11 +18,11 @@
         <h1>Change your password</h1>
         <form>
           <div id="genericError" class="inputError"></div>
-          <input type="password" id="oldPassword" placeholder="Old password"></input><br>
+          <input type="password" id="oldPassword" placeholder="Old password"/><br>
           <br>
-          <input type="password" id="newPassword" placeholder="New password"></input><br>
+          <input type="password" id="newPassword" placeholder="New password"/><br>
           <div id="newPasswordError" class="inputError"></div>
-          <input type="password" id="retypePassword" placeholder="Retype new password"></input><br>
+          <input type="password" id="retypePassword" placeholder="Retype new password"/><br>
           <div id="retypePasswordError" class="inputError"></div>
           <input type="submit" value="Submit"></input>
         </form>
