--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
+    <link rel="shortcut icon" href="images/favicon.png" media="screen" />
     <script type="text/javascript" src="lib/jquery-2.1.0.min.js"></script>
     <script type="text/javascript" src="js/errorCallback.js"></script>
     <script type="text/javascript" src="js/request.js"></script>
