--- a/app/setSSID.html
+++ b/app/setSSID.html
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
+    <link rel="shortcut icon" href="images/favicon.png" media="screen" />
     <script type="text/javascript" src="lib/jquery-2.1.0.min.js"></script>
     <script type="text/javascript" src="lib/handlebars-v1.3.0.min.js"></script>
     <script type="text/javascript" src="js/request.js"></script>
@@ -9,6 +11,7 @@
     <script type="text/javascript" src="js/templates.js"></script>
     <script type="text/javascript" src="js/errorCallback.js"></script>
     <script type="text/javascript" src="js/ssid.js"></script>
+    <title>Set SSID</title>
   </head>
 
   <body>
