--- a/app/settings.html
+++ b/app/settings.html
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <link rel="stylesheet" type="text/css" href="css/admin-style.css" media="screen" />
+    <link rel="shortcut icon" href="images/favicon.png" media="screen" />
     <script type="text/javascript" src="lib/jquery-2.1.0.min.js"></script>
     <script type="text/javascript" src="lib/handlebars-v1.3.0.min.js"></script>
     <script type="text/javascript" src="lib/jquery.validate.min.js"></script>
@@ -12,6 +14,7 @@
     <script type="text/javascript" src="js/errorCallback.js"></script>
     <script type="text/javascript" src="js/settings.js"></script>
     <script type="text/javascript" src="js/sshupload.js"></script>
+    <title>OpenWireless settings</title>
   </head>
   <body>
     <div class="container">
