--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -23,7 +23,12 @@
     <span class="icon"></span>
     <h1>Dashboard</h1>
     <span>
-      <a title="Settings" href="./settings.html"><img src="images/settings.png" class="icon" alt="Settings" /></a>
+      <a title="Settings" href="./settings.html">
+        <img src="images/settings.png" class="icon" alt="Settings" />
+      </a>
+      <a title="Logout" href="./logout.html">
+        <img src="images/logout.png" class="icon" alt="Logout" />
+      </a>
     </span>
   </header>
 
