--- a/app/settings.html
+++ b/app/settings.html
@@ -23,7 +23,12 @@
         <span class="icon"></span>
         <h1>Settings</h1>
         <span>
-          <a class="close" title="Dashboard" href="./dashboard.html">Dashboard</a>
+          <a title="Dashboard" href="./dashboard.html">
+            <img src="images/dashboard.png" class="icon" alt="dashboard" />
+          </a>
+          <a title="Logout" href="./logout.html">
+            <img src="images/logout.png" class="icon" alt="Logout" />
+          </a>
         </span>
       </header>
       <br>
