--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -23,10 +23,9 @@
     <span class="icon"></span>
     <h1>Dashboard</h1>
     <span>
-      <a title="Settings" href="./settings.html">
+      <a title="Settings" class="iconhref" href="./settings.html">
         <img src="images/settings.png" class="icon" alt="Settings" />
-      </a>
-      <a title="Logout" href="./logout.html">
+      </a><a title="Logout" class="iconhref" href="./logout.html">
         <img src="images/logout.png" class="icon" alt="Logout" />
       </a>
     </span>
