--- a/app/settings.html
+++ b/app/settings.html
@@ -23,10 +23,10 @@
         <span class="icon"></span>
         <h1>Settings</h1>
         <span>
-          <a title="Dashboard" href="./dashboard.html">
+          <a title="Dashboard" class="iconhref" href="./dashboard.html">
             <img src="images/dashboard.png" class="icon" alt="dashboard" />
           </a>
-          <a title="Logout" href="./logout.html">
+          <a title="Logout" class="iconhref" href="./logout.html">
             <img src="images/logout.png" class="icon" alt="Logout" />
           </a>
         </span>
