--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -20,14 +20,18 @@
 
 <div class="container">
   <header>
-    <span class="icon"></span>
-    <h1>Dashboard</h1>
     <span>
-      <a title="Settings" class="iconhref" href="./settings.html">
-        <img src="images/settings.png" class="icon" alt="Settings" />
-      </a><a title="Logout" class="iconhref" href="./logout.html">
-        <img src="images/logout.png" class="icon" alt="Logout" />
-      </a>
+        <a title="Settings" class="iconhref" href="./settings.html">
+            <img src="images/settings.png" class="icon" alt="Settings" />
+        </a>
+    </span>
+     
+    <h1>Dashboard</h1>
+
+    <span>
+        <a title="Logout" class="iconhref" href="./logout.html">
+            <img src="images/logout.png" class="icon" alt="Logout" />
+        </a>
     </span>
   </header>
 
