--- a/app/settings.html
+++ b/app/settings.html
@@ -20,15 +20,18 @@
     <div class="container">
       <br>
       <header>
-        <span class="icon"></span>
-        <h1>Settings</h1>
         <span>
-          <a title="Dashboard" class="iconhref" href="./dashboard.html">
-            <img src="images/dashboard.png" class="icon" alt="dashboard" />
-          </a>
-          <a title="Logout" class="iconhref" href="./logout.html">
-            <img src="images/logout.png" class="icon" alt="Logout" />
-          </a>
+            <a title="Dashboard" class="iconhref" href="./dashboard.html">
+                <img src="images/dashboard.png" class="icon" alt="dashboard" />
+            </a>
+        </span>
+ 
+        <h1>Settings</h1>
+
+        <span>
+            <a title="Logout" class="iconhref" href="./logout.html">
+                <img src="images/logout.png" class="icon" alt="Logout" />
+            </a>
         </span>
       </header>
       <br>
