Wording on change password depends on first time.

--- a/app/changePassword.html
+++ b/app/changePassword.html
@@ -15,10 +15,11 @@
     <div id="outerContainer">
       <header></header>
       <div class="formDiv">
-        <h1>Change your password</h1>
+        <h1 class="changePassword">Change Administrator Password</h1>
+        <h1 class="setPassword">Set Administrator Password</h1>
         <form>
           <div id="genericError" class="inputError"></div>
-          <input type="password" id="oldPassword" placeholder="Old password"/><br>
+          <input type="password" id="oldPassword" class="changePassword" placeholder="Old password"/><br>
           <br>
           <input type="password" id="newPassword" placeholder="New password"/><br>
           <div id="newPasswordError" class="inputError"></div>
