Wording on login page.

--- a/app/login.html
+++ b/app/login.html
@@ -15,12 +15,13 @@
   <body>
     <header></header>
     <div class="formDiv">
-      <h1>Openwireless</h1>
+      <h1>Open Wireless</h1>
+      <h4>Administrator Login</h4>
       <form>
         <div id="genericError" class="inputError"></div>
         <input type="password" placeholder="Administrator password" id="password"/><br>
         <div id="passwordError" class="inputError"></div>
-        <input type="submit" value="Submit"/>
+        <input type="submit" value="Login"/>
       </form>
     </div>
   </body>
