--- a/app/changePassword.html
+++ b/app/changePassword.html
@@ -25,7 +25,7 @@
           <div id="newPasswordError" class="inputError"></div>
           <input type="password" id="retypePassword" placeholder="Retype new password"/><br>
           <div id="retypePasswordError" class="inputError"></div>
-          <input type="submit" value="Submit"></input>
+          <input id="submit" type="submit" value="Submit"></input>
         </form>
       </div>
     </div>
