JR & LK - data use reset button resets data use

--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -13,7 +13,7 @@
         <script type="text/javascript" src="js/errorCallback.js"></script>
         <script type="text/javascript" src="js/dashboard.js"></script>
         <script type="text/javascript" src="js/update.js"></script>
-        <script type="text/javascript" src="js/update_bytecounts.js"></script>
+        <script type="text/javascript" src="js/updateBytecounts.js"></script>
         <title>OpenWireless dashboard</title>
     </head>
     <body>
