--- a/app/settings.html
+++ b/app/settings.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="js/errorCallback.js"></script>
     <script type="text/javascript" src="js/settings.js"></script>
     <script type="text/javascript" src="js/sshupload.js"></script>
+    <script type="text/javascript" src="js/usageReset.js"></script>
     <title>OpenWireless settings</title>
   </head>
   <body>
