--- a/app/login.html
+++ b/app/login.html
@@ -21,7 +21,7 @@
         <div id="genericError" class="inputError"></div>
         <input type="password" placeholder="Administrator password" id="password"/><br>
         <div id="passwordError" class="inputError"></div>
-        <input id="submit" type="submit" value="Login"/>
+        <input type="submit" value="Login"/>
       </form>
     </div>
   </body>
