Add show password to login

--- a/app/login.html
+++ b/app/login.html
@@ -20,6 +20,7 @@
       <form>
         <div id="genericError" class="inputError"></div>
         <input type="password" placeholder="Administrator password" id="password"/><br>
+        <input type="checkbox" id="showPassword"><label for="showPassword">Show password</label><br>
         <div id="passwordError" class="inputError"></div>
         <input type="submit" value="Login"/>
       </form>
